Fixing overflow

--- a/src/ui-lib/sass/05-components/03-organisms/00-page-structure/_00-page-header.scss
+++ b/src/ui-lib/sass/05-components/03-organisms/00-page-structure/_00-page-header.scss
@@ -62,7 +62,7 @@ body > header {
       @media (min-width: gravy-breakpoint(medium)) { // stylelint-disable max-nesting-depth
         display: flex;
         max-height: none;
-        overflow: auto;
+        overflow: visible;
       }
     }
 
